Fix: Main nav not showing horizontally on larger viewport.

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ header {
 @media (min-width: 400px) {
     .nav-items {
         display: flex;
+        flex-direction: row;
     }
 
     .btn-toggle {
